# ModernPIDControlSS

./: .gitignore  404.html  CMakeLists.txt  ModernPIDControlSS.h  README.md  README.txt  cpidlmfc.h  index.html  keywords.txt  library.json  library.properties  mkdocs.yml  nlsig.cpp  nlsig.h  sfunPID.cpp  sitemap.xml  testsys_ss.h  tuneKd.cpp  tuneKi.cpp  tuneKp.cpp  tuneWn.cpp
about/: index.html
about/about/: index.html
about/license/: index.html
cplmfc/: cpidlmfc.h  cplm_kernel.cpp  cplm_kernel.h  tuneKd.cpp  tuneKi.cpp  tuneKp.cpp  tuneWn.cpp
docs/: about.md  guide.md  index.md  license.md
docs/about/: about.md  license.md
docs/releases/: release.md
dynsys/: testsys_ss.cpp
examples/: CMakeLists.txt
examples/manualtuning/: .gitignore  ex-mantuning.ino
examples/simulation_fopdt/: .gitignore  CMakeLists.txt  simulation_fopdt.ino
examples/temperature_control/: CMakeLists.txt  steo_two_closedloop_settlingtimeID.ino  step_one_max_sysid.ino  step_three_controlsys.ino  step_two_closedloop_settlingtimeID.ino
guide/: index.html
helpers/: fasta_exp.h  norm_denorm_kernel.h
license/: index.html
material/: base.html
material/assets/javascripts/: extra.js
material/overrides/: home.html  main.html
material/partials/: footer.html  header.html  logo.html  more.html  nav-item.html  nav.html  search.html  social.html  source-link.html  source.html  tabs-item.html  tabs.html  toc-item.html  toc.html
nlsig/: nlsig.cpp  nlsig.h
pidkernel/: sfunPID.cpp  sfunPID.h
releases/release/: index.html
search/: search_index.json
src/: CMakeLists.txt  ModernPIDControlSS.h
src/cplmfc/: cplmfc.cpp  cplmfc.h  filterFO_pass.cpp  filterFO_pass.h
src/dynsys/: testsys_ss.h
src/helpers/: fast_exps.h  norm++kernel.h
src/nlsig/: nlsig.cpp  nlsig.h
src/pidkernel/: PIDNet.cpp  PIDNet.h
